# CubeDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.doc/: Class Intro.md  Level Process.md  OpenGL Notes.md  Project Structure.md  Simple Intro.md  TODO.md
.tools/: CCG.py  SLLG.py  ccg_config.json  ccg_config_1.json  ccg_config_2.json  ccg_config_all.json  pch_compile_command.md  sllg_config.json
.tools/ccg_configs/: 3rdparty_sllg_config.json  ccg_config_all.json  ccg_config_mid.json  cm_sllg_config.json  note.md  rm_sllg_config.json  sm_sllg_config.json
doc/: structures  structures.md  structures.txt
include/: cleanup.h  init.h  loop.h  mainProgramInc.h  pch.h  root.h  streams.h
include/3rd-lib/: json.hpp
include/core/: camera.h  fpsCounter.h  inputHandler.h  inputs.h  keyMapper.h  keys.h  modelLoader.h  monitor.h  systemMonitor.h  taskQueue.h  time.h  timeManager.h  timeMng.h  window.h  windowManager.h  windowMng.h
include/graphics/: base.h  bound_sphere.h  boundingSphere.h  cuda_utils.h  fwd.h  light.h  lod.h  mainRenderer.h  mesh.h  optix_backend.h  optix_structures.h  optix_utils.h  pbrShader.h  ray_tracing.h  renderer.h  shader.h  shaderLoader.h  shadowMap.h  textRenderer.h
include/kits/: assimp.h  cuda_and_optix.h  file_system.h  glfw.h  glm.h  imgui.h  json.h  pre_compile_header.h  streams.h  strings.h  times.h
include/loaders/: MIL_inc.h  asyncTex.h  async_tex.h  base.h  font.h  fonts.h  fwd.h  image.h  material.h  material.inl  model.h  modelIniter.h  model_initer.h  progress_tracker.h  resource.h  resource.inl  texture.h
include/main/: cleanup.h  global_variables.h  handles.h  includes.h  init.h  init_inc.h  loop.h  rendering.h
include/managers/: fwd.h  light.h  lightMng.h  light_mapper.inl  light_utils.inl  model.h  modelMng.h  model_getter.h  scene.h  sceneMng.h  ui.h  uiMng.h  ui_inc.h
include/prefabs/: light.h  lights.h  lights_fwd.h  shadowMap.h  shadow_map.h  volum_beam.h  volum_beam_inc.h
include/renderer/: main.h  shader.h  text.h  textRenderer.h
include/rendering/: mesh.h  modelLoader.h  renderer.h  shader.h  shaderLoader.h  textRenderer.h  texture.h  textureManager.h
include/resources/: fwd.h  imageData.h  material.h  materialData.h  mesh.h  model.h  modelData.h  modelLoader.h  modelManager.h  modelMng.h  placeHolder.h  place_holder.h  texture.h  texture.inl  textureBase.h  textureManager.h  textureMng.h  texture_fwd.h
include/scenes/: base.h  default.h  default_inc.h  dynamic_scene.h  fwd.h  mainScene.h  night.h  night_inc.h  sceneBase.h  sceneMng.h  sceneMng.inl  sceneUtils.inl  scene_info.h  scene_utils.inl
include/threads/: diagnostic.h  loaders.h  modelLoader.h  resourceLoader.h  taskQueue.h  taskQueue.inl  task_queue.h  task_queue.inl  textureLoader.h
include/tplib/: json.hpp
include/ui/: debugInfoManager.h  debugPanel.h  fwd.h  systemMonitor.h  uiManager.h  uiMng.h
include/unit/: stringConvertor.h
include/utils/: assimpKits.h  defines.h  font_defines.h  glmKits.h  (+12 more)
lib/: _compile.ps1  _generated.ps1
resources/: configs.json
src/: CMakeLists.txt  cleanup.cpp  glad.cpp  include.c  init.cpp  loop.cpp  main.cpp
src/core/: camera.cpp  fpsCounter.cpp  inputHandler.cpp  inputs.cpp  keyMapper.cpp  keyMapper.txt  keys.cpp  modelLoader.cpp  monitor.cpp  systemMonitor.cpp  taskQueue.cpp  time.cpp  timeManager.cpp  timeMng.cpp  track_gl.cpp  window.cpp  windowManager.cpp  windowMng.cpp
src/graphics/: bound_sphere.cpp  boundingSphere.cpp  light.cpp  lod.cpp  mainRenderer.cpp  mesh.cpp  optix_backend.cpp  optix_structures.h  pbrShader.cpp  ray_tracing.cpp  ray_tracing.cu  renderer.cpp  shader.cpp  shaderLoader.cpp  shadowMap.cpp  textRenderer.cpp
src/loaders/: AsyncTex.cpp  async_tex.cpp  font.cpp  fonts.cpp  image.cpp  material.cpp  model.cpp  modelIniter.cpp  model_initer.cpp  progress_tracker.cpp  resource.cpp  texture.cpp
src/main/: cleanup.cpp  handles.cpp  init.cpp  loop.cpp  rendering.cpp
src/managers/: light.cpp  lightMng.cpp  model.cpp  modelMng.cpp  model_getter.cpp  scene.cpp  sceneMng.cpp  ui.cpp  uiMng.cpp
src/managers/light/: cleanner.cpp  creater.cpp  getter.cpp  json_mapper.cpp  mng.cpp  utils.cpp
src/managers/model/: cleanner.cpp  creater.cpp  getter.cpp  mng.cpp
src/managers/scene/: getter.cpp  mng.cpp
src/managers/ui/: mng.cpp
src/prefabs/: light.cpp  lights.cpp  shadowMap.cpp  shadow_map.cpp  volum_beam.cpp
src/prefabs/lights/: base.cpp  cleanner.cpp  cleanners.cpp  creater.cpp  creaters.cpp  data.cpp  getter.cpp  getters.cpp  volum_beam.cpp
src/renderer/: main.cpp  shader.cpp  text.cpp  textRenderer.cpp
src/rendering/: mesh.cpp  modelLoader.cpp  renderer.cpp  shader.cpp  shaderLoad.cpp  shaderLoader.cpp  textRenderer.cpp  texture.cpp
src/resources/: imageData.cpp  material.cpp  materialData.cpp  mesh.cpp  model.cpp  modelData.cpp  modelLoader.cpp  modelManager.cpp  modelMng.cpp  placeHolder.cpp  place_holder.cpp  texture.cpp  textureManager.cpp  textureMng.cpp
src/scenes/: default.cpp  dynamic_scene.cpp  mainScene.cpp  night.cpp  sceneBase.cpp  sceneMng.cpp  scene_info.cpp
src/threads/: diagnostic.cpp  loaders.cpp  modelLoader.cpp  resourceLoader.cpp  taskQueue.cpp  task_queue.cpp  textureLoader.cpp
src/ui/: debugInfoManager.cpp  debugPanel.cpp  systemMonitor.cpp  textureManager.cpp  uiManager.cpp  uiMng.cpp
src/ui/edit/: model_ctrl.cpp  model_table.cpp  panel.cpp  preset_table.cpp  scene.cpp
src/ui/main_menu/: bottombar.cpp  menubar.cpp  panel.cpp  preview_panel.cpp  scene_selection.cpp  title_section.cpp
src/ui/panels/: control.cpp  debug.cpp  edit.cpp  paralist_area.cpp  pause.cpp  presetlib.cpp  presetlist_area.cpp
src/ui/presetlib/: panel.cpp  paralist_area.cpp  presetlist_area.cpp
src/ui/screens/: loading.cpp
src/ui/settings/: about_section.cpp  audio.cpp  content_area.cpp  control.cpp  game.cpp  panel.cpp  video.cpp
src/unit/: stringConvertor.cpp
src/utils/: UTF8_to_unicode.cpp  jsonConfig.cpp  json_config.cpp  msaConv.cpp  stringConvertor.cpp  string_conv.cpp  time.cpp  utf8_toUnicode.cpp  utf8_to_unicode.cpp
tools/: maker_config.json
(+175 files in other folders)
